--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -8,11 +8,23 @@ repository: {{{.}}}
 homepage: {{{.}}}
 {{/pubHomepage}}
 environment:
+{{#nullSafe}}
+  sdk: '>=2.12.0 <3.0.0'
+{{/nullSafe}}
+{{^nullSafe}}
   sdk: '>=2.7.0 <3.0.0'
+{{/nullSafe}}
 dependencies:
+{{#nullSafe}}
+  dio: '4.0.0-prev3'
+  openapi_dart_common: ^4.0.0-prev1
+  collection: '^1.15.0'
+{{/nullSafe}}
+{{^nullSafe}}
   dio: '>=3.0.10 <4.0.0'
   openapi_dart_common: ^3.2.0
   collection: ^1.14.11
+{{/nullSafe}}
   {{#x-dart-deps}}
   {{{.}}}
   {{/x-dart-deps}}
@@ -21,3 +33,4 @@ dev_dependencies:
 {{#x-dart-devdeps}}
   {{{.}}}
 {{/x-dart-devdeps}}
+# bought to you by the folks from FeatureHub https://featurehub.io
