--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -16,7 +16,7 @@ environment:
 {{/nullSafe}}
 dependencies:
 {{#nullSafe}}
-  dio: '4.0.0-prev3'
+  dio: '4.0.0'
   openapi_dart_common: ^4.0.0-prev1
   collection: '^1.15.0'
 {{/nullSafe}}
